apps/internal/linkding/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: svc-linkding
  labels:
    gitops: flux
