apps/internal/linkding/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkding
  namespace: svc-linkding
  labels: { app: linkding }
spec:
  type: ClusterIP
  selector: { app: linkding }
  ports:
    - name: http
      port: 80
      targetPort: http
